# quartermaster

./: Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
docs/adr/: 0015-uuidv7-document-ids.md  0016-atomic-partial-reserve-primitive.md  0017-worker-execution-model.md  0018-reaper-ledger-semantics.md  0019-reaper-deallocates-order.md  0020-translate-transient-conflicts-to-occ.md  0021-movement-ledger-no-uniqueness.md  0022-return-validation-against-shipped.md  0023-invariant-oracle-reconstructs-both-balances.md  0024-stock-guard-error-taxonomy.md  0025-read-paths-repeatable-read-snapshot.md  0029-idempotency-write-path-hardening.md  0031-fungible-receiving-cells-no-putaway-provenance.md  README.md
loadtest/: __init__.py  harness.py  multiprocess.py  runner.py  strategies.py  workload.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
src/quartermaster/: __init__.py  app.py
src/quartermaster/adapters/postgres/: engine.py  identifiers.py  tables.py  unit_of_work.py
src/quartermaster/api/: app.py  deps.py  errors.py  routes.py  schemas.py
src/quartermaster/application/: clock.py  commands.py  envelope.py  errors.py  oracle.py  ports.py  queries.py  results.py
src/quartermaster/application/handlers/: __init__.py  allocate.py  arrive.py  cancel.py  close_receipt.py  create_receipt.py  create_return.py  pack.py  pick.py  putaway.py  receive.py  ship.py
src/quartermaster/config/: settings.py
src/quartermaster/domain/: catalog.py  errors.py  movements.py  orders.py  quantities.py  receipts.py  state_machines.py  stock.py
src/quartermaster/workers/: backorder_sweep.py  idempotency_reaper.py  loop.py  reservation_reaper.py
tests/integration/: conftest.py  seed.py  test_allocate.py  test_api.py  test_backorder_sweep.py  test_connectivity.py  test_create_order_repo.py  test_deadlock_translation.py  test_engine_isolation.py  test_idempotency_write_path.py  test_load_cli.py  test_load_mixed.py  test_load_multiprocess.py  test_load_strategies.py  test_migration.py  test_oracle.py  test_pack_ship_cancel.py  test_pick.py  test_postgres_repos.py  test_putaway.py  test_read_isolation.py  test_reaper_deallocation.py  test_reapers.py  test_receive.py  test_returns.py  test_schema_constraints.py  test_schema_drift.py
tests/unit/: api_helpers.py  fakes.py  test_allocate_handler.py  test_api_allocate.py  test_api_cancel.py  test_api_create.py  test_api_errors.py  test_api_health_and_read.py  test_api_pack.py  test_api_pick.py  test_api_receipts.py  test_api_returns.py  test_api_schemas.py  test_api_ship.py  test_app_composition.py  test_application_errors.py  test_arrive_handler.py  test_backorder_sweep.py  test_cancel_handler.py  test_catalog.py  test_clock.py  test_close_receipt_handler.py  test_commands.py  test_create_receipt_handler.py  test_create_return_handler.py  test_engine.py  test_envelope.py  test_errors.py  test_fakes.py  test_idempotency_reaper.py  test_identifiers.py  test_load_runner.py  test_movements.py  test_oracle.py  test_orders.py  test_pack_handler.py  test_pick_handler.py  test_putaway_handler.py  test_queries.py  test_receipts.py  (+10 more)
